--- a/components-1/together.html
+++ b/components-1/together.html
@@ -32,7 +32,7 @@
           </svg>
         </a>
       </h1>
-      <h2 class="header__page">Header</h2>
+      <h2 class="header__page">Art Gallery</h2>
       <button id="toggle" class="header__action">
         <span class="is-invisible">Toggle Menu.</span>
         <svg
@@ -74,8 +74,15 @@
       <section class="main__deck">
         <a class="card" href="https://www.nngroup.com/articles/cards-component/">
           <h3 class="card__heading">Card</h3>
+          <span class="card__emoji">♚</span>
+        </a>
+        <a class="card" href="https://www.nngroup.com/articles/cards-component/">
+          <h3 class="card__heading">Card</h3>
           <span class="card__emoji">📇</span>
         </a>
+        <a class="card" href="https://www.nngroup.com/articles/cards-component/">
+          <h3 class="card__heading">Card</h3>
+
       </section>
     </main>
     <footer class="footer">
